--- a/content/post/2018-01-26-wisdom.md
+++ b/content/post/2018-01-26-wisdom.md
@@ -1,6 +1,5 @@
 ---
 title: "Wisdom to Start the Day"
-tags: ["Wisdom"]
 author: Rajiv Abraham
 type: post
 date: 2018-01-26T02:29:48+00:00
@@ -8,19 +7,10 @@ aliases: [
     "/431/431/",
     "/26/wisdom-to-start-the-day/"
 ]
-mf2_mp-syndicate-to:
-  - 'a:2:{i:0;s:22:"bridgy-publish_twitter";i:1;s:23:"bridgy-publish_facebook";}'
-geo_weather:
-  - 'a:2:{s:5:"units";s:1:"C";s:4:"icon";s:4:"none";}'
-mf2_syndication:
-  - 'a:0:{}'
-geo_public:
-  - 1
-categories:
-  - Musings
-format: aside
-
+tags: ["Wisdom", "Life"]
+categories: ["Musings"]
 ---
+
 <p style="text-align: left;">
   Wisdom from the ages to start your day.
 </p>
