--- a/content/post/2018-01-27-IndieWeb.md
+++ b/content/post/2018-01-27-IndieWeb.md
@@ -1,26 +1,15 @@
 ---
 title: "IndieWeb Work Day"
-tags: ["IndieWeb", "Work"]
-author: Rajiv Abraham
-type: post
 date: 2018-01-27T07:26:54+00:00
 aliases: [
     "/442/442/",
     "/27/indieweb-work-day/"
 ]
-mf2_mp-syndicate-to:
-  - 'a:2:{i:0;s:22:"bridgy-publish_twitter";i:1;s:23:"bridgy-publish_facebook";}'
-mf2_syndication:
-  - 'a:0:{}'
-geo_weather:
-  - 'a:2:{s:5:"units";s:1:"C";s:4:"icon";s:4:"none";}'
-geo_public:
-  - 1
-categories:
-  - Musings
-format: aside
-
+tags: ["IndieWeb", "Work"]
+categories: ["Musings"]
+author: "Rajiv Abraham"
 ---
+
 <p style="text-align: left;">
   An unusual work day.
 </p>
