--- a/content/post/2018-01-30-cancel.md
+++ b/content/post/2018-01-30-cancel.md
@@ -1,6 +1,5 @@
 ---
 title: "Don't Play with the Cancel Button"
-tags: ["Web Shenanigans", "Cancellation"]
 author: Rajiv Abraham
 type: post
 date: 2018-01-30T06:28:47+00:00
@@ -8,19 +7,10 @@ aliases: [
     "/456/456/",
     "/30/dont-play-with-the-cancel-button/"
 ]
-mf2_mp-syndicate-to:
-  - 'a:1:{i:0;s:4:"none";}'
-mf2_syndication:
-  - 'a:0:{}'
-geo_weather:
-  - 'a:2:{s:5:"units";s:1:"C";s:4:"icon";s:4:"none";}'
-geo_public:
-  - 1
-categories:
-  - Musings
-format: aside
-
+tags: ["Web Shenanigans", "Cancellation"]
+categories: ["Musings"]
 ---
+
 <p style="text-align: left;">
   Cancel really means cancel.
 </p>
