--- a/content/post/2018-01-31-inorbit.md
+++ b/content/post/2018-01-31-inorbit.md
@@ -1,6 +1,5 @@
 ---
 title: "Inorbit Mall Panorama"
-tags: ["Panorama", "Photograph"]
 author: Rajiv Abraham
 type: post
 date: 2018-01-31T05:15:29+00:00
@@ -8,22 +7,10 @@ aliases: [
     "/460/460/",
     "/31/inorbit-mall-panorama/"
 ]
-featured_image: /wp-content/uploads/2018/01/Panoramic-View-from-GVK-One.jpg
-mf2_mp-syndicate-to:
-  - 'a:1:{i:0;s:4:"none";}'
-tcb2_ready:
-  - 1
-mf2_syndication:
-  - 'a:0:{}'
-geo_weather:
-  - 'a:2:{s:5:"units";s:1:"C";s:4:"icon";s:4:"none";}'
-geo_public:
-  - 1
-categories:
-  - Photography
-format: image
-
+tags: ["Panorama", "Photograph"]
+categories: ["Photography"]
 ---
+
 ![Inorbit Mall Panorama](/images/Inorbit Panorama.jpg)
 
 <p style="text-align: left;">
