--- a/content/post/2018-02-04-amazon.md
+++ b/content/post/2018-02-04-amazon.md
@@ -1,6 +1,5 @@
 ---
 title: "Amazon Is a Silo"
-tags: ["Amazon", "Silo"]
 author: Rajiv Abraham
 type: post
 date: 2018-02-04T05:37:45+00:00
@@ -8,19 +7,10 @@ aliases: [
     "/484/484/",
     "/35/amazon-is-a-silo/"
 ]
-mf2_mp-syndicate-to:
-  - 'a:1:{i:0;s:4:"none";}'
-mf2_syndication:
-  - 'a:0:{}'
-geo_weather:
-  - 'a:2:{s:5:"units";s:1:"C";s:4:"icon";s:4:"none";}'
-geo_public:
-  - 1
-categories:
-  - Musings
-format: aside
-
+tags: ["Amazon", "Silo"]
+categories: ["Musings"]
 ---
+
 <p style="text-align: left;">
   Amazon is a silo.
 </p>
