--- a/content/post/2018-02-07-chutneys.md
+++ b/content/post/2018-02-07-chutneys.md
@@ -1,6 +1,5 @@
 ---
 title: "Chutneys Thali"
-tags: ["Chutneys", "Thali", "Photograph"]
 author: Rajiv Abraham
 type: post
 date: 2018-02-07T07:12:51+00:00
@@ -8,21 +7,10 @@ aliases: [
     "/497/497/",
     "/38/chutneys-thali/"
 ]
-tcb2_ready:
-  - 1
-mf2_mp-syndicate-to:
-  - 'a:1:{i:0;s:4:"none";}'
-mf2_syndication:
-  - 'a:0:{}'
-geo_weather:
-  - 'a:2:{s:5:"units";s:1:"C";s:4:"icon";s:4:"none";}'
-geo_public:
-  - 1
-categories:
-  - Photography
-format: image
-
+categories: ["Photography"]
+tags: ["Chutneys", "Thali", "Photograph"]
 ---
+
 ![Chutneys Thali](/images/Chutneys-Thali.jpg)
   
 Chutneys Thali.
