--- a/content/post/2018-02-02-las-vegas.md
+++ b/content/post/2018-02-02-las-vegas.md
@@ -1,6 +1,5 @@
 ---
 title: "Las Vegas Eatery Panorama"
-tags: ["Panorama", "Photograph"]
 author: Rajiv Abraham
 type: post
 date: 2018-02-02T05:05:19+00:00
@@ -8,21 +7,10 @@ aliases: [
     "/478/478/",
     "/33/las-vegas-eatery-panorama/"
 ]
-mf2_mp-syndicate-to:
-  - 'a:1:{i:0;s:4:"none";}'
-tcb2_ready:
-  - 1
-mf2_syndication:
-  - 'a:0:{}'
-geo_weather:
-  - 'a:2:{s:5:"units";s:1:"C";s:4:"icon";s:4:"none";}'
-geo_public:
-  - 1
-categories:
-  - Photography
-format: image
-
+tags: ["Panorama", "Photograph"]
+categories: ["Photography"]
 ---
+
 <p style="text-align: left;">
   Panoramic view of Las Vegas.
 </p>
