--- a/content/post/2018-04-18-now.md
+++ b/content/post/2018-04-18-now.md
@@ -1,6 +1,6 @@
 ---
 title: "Updated My Now Page"
-tags: ["Now Page", "IndieWeb"]
+tags: ["Now", "Now Page", "IndieWeb"]
 author: Rajiv Abraham
 type: post
 date: 2018-04-18T14:37:01+00:00
@@ -13,14 +13,7 @@ categories:
 format: aside
 
 ---
-<p style="text-align: justify;">
-  Updated my <a href="https://abraham.red/now/" target="_blank" rel="noopener">Now</a> page.
-</p>
 
-<p style="text-align: justify;">
-  Moved my primary domain to <a href="https://abraham.red/" target="_blank" rel="noopener">Abraham.Red</a>, something I can pass along in a couple of spoken words.
-</p>
+Updated my [Now](/page/now/ "Now") page.
 
-<p style="text-align: justify;">
-  Moved my <a href="https://abraham.red/blogroll/" target="_blank" rel="noopener">blogroll</a> page to my primary domain.
-</p>
+Moved my portfolio to <a href="https://nela.in/" target="_blank" rel="noopener">Rajiv Abraham Nela</a>.
