--- a/content/post/2018-04-19-blogging.md
+++ b/content/post/2018-04-19-blogging.md
@@ -16,7 +16,7 @@ format: aside
 Should blogging be made as easy as tweeting 2.0?
 
 <p style="text-align: left;">
-  If you want some history into this, you should start by reading my previous blog post on the topic <a href="https://abraham.uno/1122/1122/" target="_blank" rel="noopener">Do we really want blogging to be as easy and simple as tweeting?</a>
+  If you want some history into this, you should start by reading my previous blog post on the topic <a href="https://abraham.one//107/do-we-really-want-blogging-to-be-as-easy-and-simple-as-tweeting/" target="_blank" rel="noopener">Do We Really Want Blogging to Be As Easy and Simple As Tweeting?</a>
 </p>
 
 <p style="text-align: left;">
