--- a/content/post/2018-05-04-scandal.md
+++ b/content/post/2018-05-04-scandal.md
@@ -1,6 +1,6 @@
 ---
 title: "Scandal Season 7 Intro"
-tags: ["TV Show", "Kerry Washington"]
+tags: ["Scandal", "Kerry Washington"]
 author: Rajiv Abraham
 type: post
 date: 2018-05-04T05:05:43+00:00
